PCAP Preparation Summary Final: Google Colaboratory

--- a/PCAP_Preparation_Summary_Final.ipynb
+++ b/PCAP_Preparation_Summary_Final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_Final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+z4GEaX5w+I7QTDA2PK2r",
+      "authorship_tag": "ABX9TyNMcBco5JpFgBRl1fWiiCcR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1094,7 +1094,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         },
         "outputId": "1aa02c1e-7aee-4069-a7f2-614bd1358523"
       },
@@ -1115,6 +1115,578 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_XyKGBGSPU_5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q26. Knowing that the function named m() resides in the module named f, and the code contains the following import statement, choose the right way to invoke the function:\n",
+        "\n",
+        "`from m import f`\n",
+        "1. **the import statement is invalid**\n",
+        "2. mod.fun()\n",
+        "3. mod:fun()\n",
+        "4. fun()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dl5agUwjPnew",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q27. The package directory/folder may contain a file intended to initialize the package. Its name is:\n",
+        "1. **__ init __.py**\n",
+        "2. init.py\n",
+        "3. __ init.py __\n",
+        "4. __ init __."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IYZQBnDgP544",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q28. The folder created by Python used to store pyc files is named:\n",
+        "1. __ pycfiles __\n",
+        "2. __ pyc __\n",
+        "3. **__ pycache __**\n",
+        "4. __ cache __"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2EJOAfiOQEtn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q29. What will be the output of the following code, located in the file module.py?\n",
+        "```\n",
+        "print(__name__)\n",
+        "```\n",
+        "1. main\n",
+        "2. __ module.py __\n",
+        "3. module.py\n",
+        "4. **__ main __**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rYPit0HCQSte",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b37414ea-a9e7-4e26-cff1-e14bccce9e15"
+      },
+      "source": [
+        "print(__name__)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "__main__\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XXFZuLl2QVAn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q30. If you want to tell your module’s users that a particular variable should not be accessed directly, you may:\n",
+        "1. start its name with a capital letter\n",
+        "2. use its number instead of its name\n",
+        "3. **start its name with _ or __**\n",
+        "4. build its name with lowercase letters only"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5DS7THeFQg4X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Class definition with two different variables\n",
+        "class A:\n",
+        "    __a = 2\n",
+        "    b = 3\n",
+        "    def __init__(self):\n",
+        "      pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "02F2A1-RRXkg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        },
+        "outputId": "efc6a748-9e99-4405-a948-d042d73bfcba"
+      },
+      "source": [
+        "# Returns AttributeError: type object 'A' has no attribute 'a'\n",
+        "A.a"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-d7a30d9da173>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: type object 'A' has no attribute 'a'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OhgxHuZgRSdD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a03b355d-6c3b-4e07-d616-7e437421ec66"
+      },
+      "source": [
+        "# Retruns result as per definition\n",
+        "A.b"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "txNWS48oRcES",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q31. If there is a finally: branch inside the try: block, we can say that:\n",
+        "1. it won’t be executed if no exception is raised\n",
+        "2. **it will always be executed**\n",
+        "3. branches is executed\n",
+        "4. it will be executed when there is no else: branch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q3TUf2TiRzOf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "65a4115c-9e60-430b-86ba-0e7386a7c054"
+      },
+      "source": [
+        "try:\n",
+        "  print(1/0)\n",
+        "except ArithmeticError:\n",
+        "  print(\"Except block.\")\n",
+        "finally:\n",
+        "  print(\"Finally is always executed!\")"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Except block.\n",
+            "Finally is always executed!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q-Q6IaCdSKOG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q32. What will be the output of the following snippet?\n",
+        "```\n",
+        "try:\n",
+        "  raise Exception\n",
+        "except BaseException:\n",
+        "  print(“a”,end=”)\n",
+        "else:\n",
+        "  print(“b”,end=”)\n",
+        "finally:\n",
+        "  print(“c”)\n",
+        "```\n",
+        "1. a\n",
+        "2. ab\n",
+        "3. bc\n",
+        "4. **ac**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LJlWTx4GScQQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7d7232e4-41e6-4c82-97bc-2e438d2ad2de"
+      },
+      "source": [
+        "try:\n",
+        "  raise Exception\n",
+        "except BaseException:\n",
+        "  print('a',end='')\n",
+        "else:\n",
+        "  print('b',end='')\n",
+        "finally:\n",
+        "  print('c')"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ac\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "On28omSOSmPg",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q33. What will be the output of the following snippet?\n",
+        "```\n",
+        "class A:\n",
+        "  def __init__(self,name):\n",
+        "    self.name = name\n",
+        "a = A(“class”)\n",
+        "print(a)\n",
+        "```\n",
+        "1. a number\n",
+        "2. **a string ending with a long hexadecimal number**\n",
+        "3. class\n",
+        "4. name"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tXBA7rhFSywK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a9f0ba77-15ab-4cfd-dacf-4470e3aafab0"
+      },
+      "source": [
+        "class A:\n",
+        "  def __init__(self,name):\n",
+        "    self.name = name\n",
+        "a = A('class')\n",
+        "print(a)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<__main__.A object at 0x7fc1472dd898>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Q88mKOQS7yG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q34. What will be the output of the following snippet?\n",
+        "```\n",
+        "try:\n",
+        "  raise Exception\n",
+        "except:\n",
+        "  print(“c”)\n",
+        "except BaseException:\n",
+        "  print(“a”)\n",
+        "except Exception:\n",
+        "  print(“b”)\n",
+        "```\n",
+        "1. **it will an cause error**\n",
+        "2. b\n",
+        "3. c\n",
+        "4. a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XAVFJYx9Tqyp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 132
+        },
+        "outputId": "9479d21c-44b9-4a3a-d7e4-6ef1c826fd00"
+      },
+      "source": [
+        "# Returns SyntaxError: default 'except:' must be last\n",
+        "try:\n",
+        "  raise Exception\n",
+        "except:\n",
+        "  print('c')\n",
+        "except BaseException:\n",
+        "  print('a')\n",
+        "except Exception:\n",
+        "  print('b')"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-d8928c977a16>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    raise Exception\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m default 'except:' must be last\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bgEtpCVzUt5-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q35. What will be the output of the following snippet?\n",
+        "```\n",
+        "class X:\n",
+        "  pass\n",
+        "class Y(X):\n",
+        "  pass\n",
+        "class Z(Y):\n",
+        "  pass\n",
+        "x = X()\n",
+        "z = Z()\n",
+        "print(isinstance(x,Z),isinstance(z,X))\n",
+        "```\n",
+        "1. False False\n",
+        "2. True True\n",
+        "3. True False\n",
+        "4. **False True**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2M1ZvmxnU99Z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c34ce423-038c-491f-de5c-1019d958c3ab"
+      },
+      "source": [
+        "class X:\n",
+        "  pass\n",
+        "class Y(X):\n",
+        "  pass\n",
+        "class Z(Y):\n",
+        "  pass\n",
+        "x = X()\n",
+        "z = Z()\n",
+        "print(isinstance(x,Z),isinstance(z,X))"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FUytHIQ_VS-w",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q36. The following code prints:\n",
+        "```\n",
+        "x = “\\”\n",
+        "print(len(x))\n",
+        "```\n",
+        "1. 1\n",
+        "2. **the code will cause an error**\n",
+        "3. 2\n",
+        "4. 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sbBmOlQrWJnq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 132
+        },
+        "outputId": "5d7a5f83-b454-4b93-f277-6b489ec54c9a"
+      },
+      "source": [
+        "x = '\\'\n",
+        "print(len(x))"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-77c530d6e6f2>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x = '\\'\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LaqmaP68WO84",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q37. The following code prints:\n",
+        "\n",
+        "```\n",
+        "x = “””\n",
+        "“””\n",
+        "print(len(x))\n",
+        "```\n",
+        "1. 2\n",
+        "2. **1**\n",
+        "3. the code will cause an error\n",
+        "4. 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cOCNj1G2WaIY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0029a997-881a-4b3a-b87c-fa84fe1e2d3f"
+      },
+      "source": [
+        "x = \"\"\"\n",
+        "\"\"\"\n",
+        "print(len(x))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "slGccqi2Wl1x",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q38. If the class constructor is declared as below, which one of the assignments is valid?\n",
+        "```\n",
+        "class Class:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "```\n",
+        "1. object = Class(None)\n",
+        "2. object = Class(1)\n",
+        "3. object = Class(1,2)\n",
+        "4. **object = Class()**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hga9A1xFWywx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Class:\n",
+        "  def __init__(self):\n",
+        "    pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
