PCAP Preparation Summary Final: Google Colaboratory

--- a/PCAP_Preparation_Summary_Final.ipynb
+++ b/PCAP_Preparation_Summary_Final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_Final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNMcBco5JpFgBRl1fWiiCcR",
+      "authorship_tag": "ABX9TyMLqK/LOMeox9aHHP43G/A+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1687,6 +1687,188 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uT_JJXC-Xs9E",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q39. What will be the output of the following code?\n",
+        "   class A:\n",
+        "```\n",
+        "A = 1\n",
+        "def __init__(self,v = 2):\n",
+        "  self.v = v + A.A\n",
+        "  A.A += 1\n",
+        "def set(self,v):\n",
+        "  self.v += v\n",
+        "  A.A += 1\n",
+        "  return\n",
+        "a = A()\n",
+        "a.set(2)\n",
+        "print(a.v)\n",
+        "```\n",
+        "1. 7\n",
+        "2. **5**\n",
+        "3. 1\n",
+        "4. 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JAoJuqFuYANC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b88a4005-3196-4287-f4b1-c4ae9af73409"
+      },
+      "source": [
+        "class A:\n",
+        "  A = 1\n",
+        "  def __init__(self,v = 2):\n",
+        "    self.v = v + A.A\n",
+        "    A.A += 1\n",
+        "  def set(self,v):\n",
+        "    self.v += v\n",
+        "    A.A += 1\n",
+        "    return\n",
+        "a = A()\n",
+        "a.set(2)\n",
+        "print(a.v)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1ljp8fkxYPvT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q40. What will be the output of the following code? \n",
+        "```\n",
+        "class A:\n",
+        "  A = 1\n",
+        "def __init__(self):\n",
+        "  self.a = 0\n",
+        "print(hasattr(A,’A’))\n",
+        "```\n",
+        "1. **True**\n",
+        "2. 0\n",
+        "3. 1\n",
+        "4. False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7z5GsDtGYckJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "29fa28cd-d817-4d7f-fe5e-005c50cf4f84"
+      },
+      "source": [
+        "class A:\n",
+        "  A = 1\n",
+        "def __init__(self):\n",
+        "  self.a = 0\n",
+        "print(hasattr(A,'A'))"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pgvcydUaYhdK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q41. What will be the result of executing the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  pass\n",
+        "class B:\n",
+        "  pass\n",
+        "class C(A,B):\n",
+        "  pass\n",
+        "print(issubclass(C,A) and issubclass(C,B))\n",
+        "```\n",
+        "1. **it will print True**\n",
+        "2. it will raise an exception\n",
+        "3. it will print an empty line\n",
+        "4. it will print False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BSORSsJJYvx2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "abb88b2b-a1af-47a4-c377-098f0491703b"
+      },
+      "source": [
+        "class A:\n",
+        "  pass\n",
+        "class B:\n",
+        "  pass\n",
+        "class C(A,B):\n",
+        "  pass\n",
+        "print(issubclass(C,A) and issubclass(C,B))"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HIxRKMDlY1Zp",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q42. The sys.stdout stream is normally associated with:\n",
+        "1. **the screen**\n",
+        "2. a null device\n",
+        "3. the keyboard\n",
+        "4. the printer"
+      ]
     }
   ]
 }
