PCAP Preparation Summary Final: Google Colaboratory

--- a/PCAP_Preparation_Summary_Final.ipynb
+++ b/PCAP_Preparation_Summary_Final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_Final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLqK/LOMeox9aHHP43G/A+",
+      "authorship_tag": "ABX9TyOkTL84/jJpih1ezne7PQcx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1868,6 +1868,119 @@
         "2. a null device\n",
         "3. the keyboard\n",
         "4. the printer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IED3UjXJZVvD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q43. What will be the effect of running the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  def __init__(self,v):\n",
+        "    self._a = v + 1\n",
+        "a = A(0)\n",
+        "print(a._a)\n",
+        "```\n",
+        "1. it will print 0\n",
+        "2. it will print 1\n",
+        "3. it will print 2\n",
+        "4. it will raise an AttributeError exception"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EXgIujgYZhDZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a27357ba-e0f1-4843-dfd2-86d9c9b29452"
+      },
+      "source": [
+        "class A:\n",
+        "  def __init__(self,v):\n",
+        "    self._a = v + 1\n",
+        "a = A(0)\n",
+        "print(a._a)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ACfwcOHIZn8h",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q44. What will be the result of executing the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  def f(self):\n",
+        "    return 1\n",
+        "  def g():\n",
+        "    return self.f()\n",
+        "a = A()\n",
+        "print(a.g())\n",
+        "```\n",
+        "1. it will print 0\n",
+        "2. it will print True\n",
+        "3. it will print 1\n",
+        "4. it will raise an exception"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fi8_TkorZ2iH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        },
+        "outputId": "90a98616-f4a4-4f35-aed0-6046bd84edfe"
+      },
+      "source": [
+        "# The code will raise an exception. TypeError: g() takes 0 positional arguments but 1 was given\n",
+        "class A:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  def f(self):\n",
+        "    return 1\n",
+        "  def g():\n",
+        "    return self.f()\n",
+        "a = A()\n",
+        "print(a.g())"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-45-976ff4659488>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: g() takes 0 positional arguments but 1 was given"
+          ]
+        }
       ]
     }
   ]
