PCAP Preparation Summary Final: Google Colaboratory

--- a/PCAP_Preparation_Summary_Final.ipynb
+++ b/PCAP_Preparation_Summary_Final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_Final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkTL84/jJpih1ezne7PQcx",
+      "authorship_tag": "ABX9TyOr0612LOM9tbk3CX/guEU2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1981,6 +1981,223 @@
             "\u001b[0;31mTypeError\u001b[0m: g() takes 0 positional arguments but 1 was given"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t2V3N9R3aV4s",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q45. What will be the result of executing the following code?\n",
+        "\n",
+        "```\n",
+        "class A:\n",
+        "  def a(self):\n",
+        "    print(‘a’)\n",
+        "class B:\n",
+        "  def a(self):\n",
+        "    print(‘b’)\n",
+        "class C(A,B):\n",
+        "  def c(self):\n",
+        "    self.a()\n",
+        "o = C()\n",
+        "o.c()\n",
+        "```\n",
+        "1. it will print b\n",
+        "2. **it will print a**\n",
+        "3. it will raise an exception\n",
+        "4. it will print c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QzT5Gt4Hao1j",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "02bc9ae5-ca42-4642-9f12-88ccb8f2d447"
+      },
+      "source": [
+        "class A:\n",
+        "  def a(self):\n",
+        "    print('a')\n",
+        "class B:\n",
+        "  def a(self):\n",
+        "    print('b')\n",
+        "class C(A,B):\n",
+        "  def c(self):\n",
+        "    self.a()\n",
+        "o = C()\n",
+        "o.c()"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FLn4_QkQbwhe",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q46. The Exception class contains a property named args, and it is a:\n",
+        "1. string\n",
+        "2. **tuple**\n",
+        "3. list\n",
+        "4. dictionary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mxYsSbCRcNDS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q47. What will be the result of executing the following code?\n",
+        "```\n",
+        "def I(n):\n",
+        "  s = ”\n",
+        "  for i in range(n):\n",
+        "    s += ‘*’\n",
+        "    yield s\n",
+        "  for x in I(3):\n",
+        "    print(x,end=”)\n",
+        "```\n",
+        "1. it will print * * *\n",
+        "2. it will print * * * *\n",
+        "3. it will print *\n",
+        "4. it will print * * * * * * (answer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zldMzxu-c1p7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f76d5b74-d456-4591-cf9e-24945eddbc59"
+      },
+      "source": [
+        "def I(n):\n",
+        "  s = ''\n",
+        "  for i in range(n):\n",
+        "    s += '*'\n",
+        "    yield s\n",
+        "for x in I(3):\n",
+        "  print(x,end='')"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "******"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QNXNohUSdYVz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q48. What will be the result of executing the following code?\n",
+        "```\n",
+        "def a(x):\n",
+        "  def b():\n",
+        "    return x + x\n",
+        "    return b\n",
+        "x = a('x')\n",
+        "y = a('')\n",
+        "print(x() + y())\n",
+        "```\n",
+        "1. it will print xxxxxx\n",
+        "2. it will print x\n",
+        "3. **it will print xx**\n",
+        "4. it will print xxxx"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gT-l4owmdqv8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "303a8f4a-aa92-4a1b-af86-d24ea5eeca5b"
+      },
+      "source": [
+        "def a(x):\n",
+        "  def b():\n",
+        "    return x + x\n",
+        "  return b\n",
+        "x = a('x')\n",
+        "y = a('')\n",
+        "print(x() + y())"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "xx\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "epmIjTpMd05K",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q49. If s is a stream opened in read mode, the following line\n",
+        "```\n",
+        "q = s.readlines()\n",
+        "```\n",
+        "will assign q as a:\n",
+        "1. string\n",
+        "2. dictionary\n",
+        "3. **list**\n",
+        "4. tuple"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k1cGHi6EeCWD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q50. If you want to write a byte array’s content to a stream, you’d use:\n",
+        "1. **the write() method**\n",
+        "2. writebytearray() method\n",
+        "3. the writefrom() method\n",
+        "4. writeto() method"
       ]
     }
   ]
