V. PCAP Preparation Notebook: Google Colaboratory

--- a/PCAP_Preparation_Notebook_V.ipynb
+++ b/PCAP_Preparation_Notebook_V.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Notebook_V.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPCypKtQ+e5++4+nemo22O0",
+      "authorship_tag": "ABX9TyNuwgO09+6mSzqwJFgLkLt6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1562,6 +1562,80 @@
         "2. read 1 kilobyte from the stream\n",
         "3. **read 1 character from the stream**\n",
         "4. read 1 line from the stream"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aWTjzsd4whuk",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q26. How does the readline() method react when the end‑of‑file occurs?\n",
+        "1. it returns eof\n",
+        "2. it returns ‑1\n",
+        "3. **it returns an empty string**\n",
+        "4. it raises an exception"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AQhwdawnwq37",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q27. The readlines() method returns a:\n",
+        "1. **list**\n",
+        "2. dictionary\n",
+        "3. tuple\n",
+        "4. string"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ny9zU2D5wzFS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q28. Assuming that the open() invocation has gone successfully, the following snippet will:\n",
+        "```\n",
+        "for x in open(‘file’,’rt’):\n",
+        "  print(x)\n",
+        "```\n",
+        "1. **read the file line by line**\n",
+        "2. read the file character by character\n",
+        "3. cause an exception\n",
+        "4. read the whole file at once"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NQJceK8vxnAn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q29. The byte array class can create objects which are designed to:\n",
+        "1. build arrays 1 byte in size\n",
+        "2. convert tuples into lists\n",
+        "3. convert lists into tuples\n",
+        "4. **store amorphic data organized in bytes**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "34SE6yDMxuls",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q30. If you want to fill a byte array with data read in from a stream, you use the:\n",
+        "1. read() method\n",
+        "2. **readinto() method**\n",
+        "3. readfrom() method\n",
+        "4. readbytes() method"
       ]
     }
   ]
